--- a/backend.service
+++ b/backend.service
@@ -1,7 +1,6 @@
 [Unit]
-Description=ROT13 demo service
-After=network.target
-StartLimitIntervalSec=0
+Description=Backend Service
+
 [Service]
 Type=simple
 Restart=always
